Fix pagination info rendering width on mobile - for real this time

--- a/static/style.css
+++ b/static/style.css
@@ -48,7 +48,7 @@ body {
     padding-top: 5px;
     padding-bottom: 0;
     padding-left: 0;
-    width: 40em;
+    width: 100%;
     margin: .5em;
     margin-left: 0;
     font-size: 12px;
